--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "garagenisse",
   "license": "ISC",
   "dependencies": {
+    "config": "^1.20.1",
     "file-tail": "^0.3.0",
     "node-slack": "0.0.7",
     "string": "^3.3.1"
